--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "react-scripts": "1.1.4"
   },
   "dependencies": {
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "react": "^16.3.1",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.1"
